public enum AnimationType
{
    Idle,
    Run,
    Roll,
    CharacterOptionStart, CharacterOptionLoop, CharacterOptionEnd,
    JumpStart, JumpEnd, JumpPeak, JumpAttack, JumpRising, JumpFalling,
    DefendStart, DefendEnd, DefendLoop,
    Hit,
    Death,
    Ultimate,
    Attack1, Attack2, Attack3,
    RecoveryFromHit,
    DefendHit
}